[project]
name = "pyloxone2mqtt"
version = "0.1.0"
description = "A bridge between Loxone and MQTT"
authors = [
    {name = "Jakob Gliwa"}
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "aiomqtt",
    "fastapi",
    "pycryptodome",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
    "websockets",
    "python-dotenv",
    "gmqtt",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.hatch.build.targets.sdist]
include = [
    "/lib",
] 